--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ header nav ul li a{
 
 #main-image{
     height: 500px;
-    background: url('images/main.jpg') center;
+    background: url('images/main2.jpg') center;
 
 }
 #main-image h2{
